--- a/css/style.css
+++ b/css/style.css
@@ -87,8 +87,8 @@ header a:hover:not(a:nth-child(3)), header a:focus:not(a:nth-child(3)){
 
 #menu p:nth-child(2){
   
-  margin-top: -1%;
-  margin-bottom: 0.5%;
+  margin-top: -0.5%;
+  margin-bottom: 1%;
 }
 #menu p{
   
@@ -158,6 +158,9 @@ header a:hover:not(a:nth-child(3)), header a:focus:not(a:nth-child(3)){
 #filtres{
   font-weight: bold;
 }
+#filtres h3{
+  margin-bottom: 0.5%;
+}
 #filtres button{
   
   border: 2px solid #f2f2f2;
@@ -201,11 +204,11 @@ header a:hover:not(a:nth-child(3)), header a:focus:not(a:nth-child(3)){
   
 }
 #hebergements h2{
-  margin-left: 5.6%;
+  margin-left: 2.7%;
   margin-bottom: 0;
 }
-#hebergements p:not(figcaption p){  
-  margin-left: 5.5%;
+#hebergements p:last-child{  
+  margin-left: 2.7%;
   margin-bottom: 3%;
   
 }
@@ -300,8 +303,8 @@ header a:hover:not(a:nth-child(3)), header a:focus:not(a:nth-child(3)){
   display: flex;
   flex-flow: row wrap ;
   
-  width: 80%;
-  padding-left: 5%;
+  width: 70%;
+  padding-left: 2%;
 }
 #populaires h3{
   margin: 0;
@@ -323,7 +326,7 @@ header a:hover:not(a:nth-child(3)), header a:focus:not(a:nth-child(3)){
   border-bottom-left-radius: 20px;
 
   object-fit : cover;
-  width: 33%;
+  width: 50%;
   height: 100%;
 }
 .fa-chart-line{
